--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body onload="videoProcessor.doLoad()">
 
     <div>
-        <video id="video" src="video.webm" controls="true" width="auto" height="250"></video>
+        <video id="video" src="casino_royale.mp4" controls="true" width="auto" height="250"></video>
     </div>
     <div>
         <canvas id="canvas" class="hide"></canvas>
