--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
     <div id="sceneContainer" class="clear"></div>
 
+    <script src="histogram-drawer.js"></script>
     <script src="videoprocessor.js"></script>
     <script src="histogram.js"></script>
     <script src="shotdetection.js"></script>
