import edgedetection usage

--- a/index.html
+++ b/index.html
@@ -23,11 +23,32 @@
     </div>
     <div id="sceneContainer" class="clear"></div>
 
+    <image id="image" src="" />
+
+    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="videoprocessor.js"></script>
     <script src="histogram.js"></script>
     <script src="shotdetection.js"></script>
     <script src="frame.js"></script>
     <script src="statistics.js"></script>
+    <script src="edgedetection.js"></script>
+
+    <script>
+        var edgeDetector = new edgeDetector();
+        var edgeDetectionInitialized = false;
+
+        $('#image').on('imageDataChanged', function() {
+            if (false == edgeDetectionInitialized) {
+                edgeDetector.imgElement = $('#image')[0];
+                edgeDetector.threshold = 60;
+                edgeDetector.init();
+            }
+
+            edgeDetectionInitialized = true;
+            edgeDetector.findEdges();
+
+        });
+    </script>
 
 </body>
 </html>
